// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form Demo form 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <form
      class="Form-n70q8u-0 cTTHCQ"
    >
      <h2
        class="Text-sc-1wu7vpu-0-h2 iNwjDZ"
        font-size="26px"
        font-weight="500"
      >
        Job 324400
      </h2>
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 kaiHPv Alert-u8lbe-0 dikAgG"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 fvROUF"
          color="#cc1439"
          fill="#cc1439"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="Box-sc-1qu1edy-0 jRfwdL"
        >
          <p
            class="Text-sc-1wu7vpu-0 deRFEe"
            color="currentColor"
            font-size="16px"
            font-weight="bold"
          >
            Errors have occured ...
          </p>
          <p
            class="Text-sc-1wu7vpu-0 jRzHjr"
            color="currentColor"
            font-size="16px"
          >
            Instructions and description of errors
          </p>
          <ul
            class="List-sc-1cqkmnl-0 fopWsv"
            color="currentColor"
          >
            <li
              class="ListItem-qqenhw-0 jlnRPI"
              color="currentColor"
            >
              Affected field
            </li>
            <li
              class="ListItem-qqenhw-0 jlnRPI"
              color="currentColor"
            >
              Unmet criteria
            </li>
            <li
              class="ListItem-qqenhw-0 jlnRPI"
              color="currentColor"
            >
              <a
                href="https://nulogy.design/"
              >
                Affected field
              </a>
            </li>
          </ul>
        </div>
      </div>
      <fieldset
        class="FormSection-sc-5yud6c-1 iWTTOf"
      >
        <legend
          class="Text-sc-1wu7vpu-0-h3 Headings__SubsectionTitle-igpciy-0 FormSection__FormSectionTitle-sc-5yud6c-0 hiJQbh"
          font-size="20px"
          font-weight="500"
        >
          Job Information
        </legend>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Project
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="project"
                  placeholder="Project 128703"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Project description
              </span>
              <span
                class="Text-sc-1wu7vpu-0 AJnss"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
              <p
                class="Text-sc-1wu7vpu-0 HelpText__HelpTextContent-sc-1jzmq2g-0 gYbAkC"
                color="currentColor"
                font-size="16px"
              >
                Project description helps identify the project.
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="project-description"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Project status
              </span>
            </div>
            <div
              class=" css-2b097c-container"
            >
              <div
                class=" css-1liu8yu-Control"
              >
                <div
                  class=" css-7zc8my"
                >
                  <div
                    class=" css-1yhx6vz-Placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class="css-17yls17-Input"
                  >
                    <div
                      class=""
                      style="display:inline-block"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="project-status"
                        spellcheck="false"
                        style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class=" css-43ykx9-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-1fi275-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Item code
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="true"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gpgWan"
                  id="item-code"
                  value="WS2SB6"
                />
              </div>
            </div>
          </label>
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 cGCKPF"
            color="#cc1439"
          >
            <svg
              aria-hidden="true"
              class="Icon-fc7twp-0 jqHWbl"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="24px"
              icon="error"
              mr="x1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <div
              class="InlineValidation__Wrapper-sc-1jic7dw-0 dIOwUC"
            >
              <p
                class="Text-sc-1wu7vpu-0 jRzHjr"
                color="currentColor"
                font-size="16px"
              >
                Item WS2SB6 does not exist.
              </p>
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Eaches expected on Job
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="eaches-expected"
                  placeholder="2 000"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Eaches remaining on Project
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 hKYeEh"
                  disabled=""
                  id="eaches-remaining"
                  value="18 000"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Scheduled start
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="scheduled-start"
                  placeholder="MMM-DD-YYYY"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Scheduled end
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="scheduled-end"
                  placeholder="MMM-DD-YYYY"
                />
              </div>
            </div>
          </label>
        </div>
        <fieldset
          class="Fieldset-sc-9aoml1-0 SrOR CheckboxGroup-sc-16y7xr8-0 dmMpTC"
        >
          <legend
            style="margin-bottom:8px"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Line Lead
            </span>
            <span
              class="Text-sc-1wu7vpu-0 AJnss"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
          </legend>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc Checkbox-sc-1nm58f1-2 dGUzME"
          >
            <label
              class="ClickInputLabel-j2axnv-0 hdKIjC"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS Checkbox-sc-1nm58f1-2 dGUzME"
                name="linelead"
                type="checkbox"
                value="christiaan"
              />
              <div
                class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
              />
              <p
                class="Text-sc-1wu7vpu-0 jRzHjr"
                color="currentColor"
                font-size="16px"
              >
                Christiaan Oostenbrug
              </p>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc Checkbox-sc-1nm58f1-2 dGUzME"
          >
            <label
              class="ClickInputLabel-j2axnv-0 hdKIjC"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS Checkbox-sc-1nm58f1-2 dGUzME"
                name="linelead"
                type="checkbox"
                value="matt"
              />
              <div
                class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
              />
              <p
                class="Text-sc-1wu7vpu-0 jRzHjr"
                color="currentColor"
                font-size="16px"
              >
                Matt Dunn
              </p>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc Checkbox-sc-1nm58f1-2 dGUzME"
          >
            <label
              class="ClickInputLabel-j2axnv-0 jxKJCC"
              disabled=""
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="Checkbox__CheckboxInput-sc-1nm58f1-1 gYNwWa Checkbox-sc-1nm58f1-2 dGUzME"
                disabled=""
                name="linelead"
                type="checkbox"
                value="clemens"
              />
              <div
                class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
                disabled=""
              />
              <p
                class="Text-sc-1wu7vpu-0 boKLRH"
                color="currentColor"
                disabled=""
                font-size="16px"
              >
                Clemens Park
              </p>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc Checkbox-sc-1nm58f1-2 dGUzME"
          >
            <label
              class="ClickInputLabel-j2axnv-0 jxKJCC"
              disabled=""
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="Checkbox__CheckboxInput-sc-1nm58f1-1 gYNwWa Checkbox-sc-1nm58f1-2 dGUzME"
                disabled=""
                name="linelead"
                type="checkbox"
                value="nikola"
              />
              <div
                class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
                disabled=""
              />
              <p
                class="Text-sc-1wu7vpu-0 boKLRH"
                color="currentColor"
                disabled=""
                font-size="16px"
              >
                Nikola Pejcic
              </p>
            </label>
          </div>
        </fieldset>
        <fieldset
          class="Fieldset-sc-9aoml1-0 SrOR RadioGroup-pgv2w1-0 ipQJFh"
          id="reconcile"
        >
          <legend
            style="margin-bottom:8px"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Reconcile
            </span>
          </legend>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc Radio-sc-82dpxx-2 fSARal"
          >
            <label
              class="ClickInputLabel-j2axnv-0 hdKIjC"
            >
              <input
                aria-invalid="true"
                aria-required="false"
                checked=""
                class="Radio__RadioInput-sc-82dpxx-1 ciJsGK Radio-sc-82dpxx-2 fSARal"
                name="settingSelection"
                type="radio"
                value="yes"
              />
              <div
                class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
              />
              <span
                class="Text-sc-1wu7vpu-0 jRzHjr"
                color="currentColor"
                font-size="16px"
              >
                 Yes 
              </span>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc Radio-sc-82dpxx-2 fSARal"
          >
            <label
              class="ClickInputLabel-j2axnv-0 hdKIjC"
            >
              <input
                aria-invalid="true"
                aria-required="false"
                class="Radio__RadioInput-sc-82dpxx-1 ciJsGK Radio-sc-82dpxx-2 fSARal"
                name="settingSelection"
                type="radio"
                value="no"
              />
              <div
                class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
              />
              <span
                class="Text-sc-1wu7vpu-0 jRzHjr"
                color="currentColor"
                font-size="16px"
              >
                 No 
              </span>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc Radio-sc-82dpxx-2 fSARal"
          >
            <label
              class="ClickInputLabel-j2axnv-0 jxKJCC"
              disabled=""
            >
              <input
                aria-invalid="true"
                aria-required="false"
                class="Radio__RadioInput-sc-82dpxx-1 bzuiei Radio-sc-82dpxx-2 fSARal"
                disabled=""
                name="settingSelection"
                type="radio"
                value="maybe"
              />
              <div
                class="Radio__VisualRadio-sc-82dpxx-0 dWBwrU"
                disabled=""
              />
              <span
                class="Text-sc-1wu7vpu-0 boKLRH"
                color="currentColor"
                disabled=""
                font-size="16px"
              >
                 Maybe 
              </span>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 cGCKPF"
            color="#cc1439"
          >
            <svg
              aria-hidden="true"
              class="Icon-fc7twp-0 jqHWbl"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="24px"
              icon="error"
              mr="x1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <div
              class="InlineValidation__Wrapper-sc-1jic7dw-0 dIOwUC"
            >
              <p
                class="Text-sc-1wu7vpu-0 jRzHjr"
                color="currentColor"
                font-size="16px"
              >
                Only yes can be selected...
              </p>
            </div>
          </div>
        </fieldset>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq Toggle-sc-1oqd206-0 gIqgQC"
        >
          <div
            id="Job Visibility-label"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Job Visibility
              </span>
            </div>
            <div
              class="ClickInputLabel-j2axnv-0 hdKIjC"
            >
              <div
                class="ToggleButton__Switch-asgrb8-1 evdDoW"
              >
                <input
                  aria-labelledby="Job Visibility-label"
                  aria-required="false"
                  class="ToggleButton__ToggleInput-asgrb8-2 bRfwtk"
                  id="job-visibility"
                  type="checkbox"
                  value="on"
                />
                <span
                  class="ToggleButton__Slider-asgrb8-0 bExZFy"
                />
              </div>
              <p
                class="Text-sc-1wu7vpu-0 flEKvK"
                color="currentColor"
                font-size="16px"
              >
                Hidden
              </p>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormSection-sc-5yud6c-1 iWTTOf"
      >
        <legend
          class="Text-sc-1wu7vpu-0-h3 Headings__SubsectionTitle-igpciy-0 FormSection__FormSectionTitle-sc-5yud6c-0 hiJQbh"
          font-size="20px"
          font-weight="500"
        >
          Rejects
        </legend>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Item
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="true"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gpgWan"
                  id="items"
                  value="235432"
                />
              </div>
            </div>
          </label>
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 cGCKPF"
            color="#cc1439"
          >
            <svg
              aria-hidden="true"
              class="Icon-fc7twp-0 jqHWbl"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="24px"
              icon="error"
              mr="x1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <div
              class="InlineValidation__Wrapper-sc-1jic7dw-0 dIOwUC"
            >
              <p
                class="Text-sc-1wu7vpu-0 jRzHjr"
                color="currentColor"
                font-size="16px"
              >
                Item 235432 is not a valid entry
              </p>
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Quantity
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="quantity"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq Toggle-sc-1oqd206-0 gIqgQC"
        >
          <div
            id="Reject visibility-label"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Reject visibility
              </span>
            </div>
            <div
              class="ClickInputLabel-j2axnv-0 jxKJCC"
              disabled=""
            >
              <div
                class="ToggleButton__Switch-asgrb8-1 evdDoW"
              >
                <input
                  aria-labelledby="Reject visibility-label"
                  aria-required="false"
                  class="ToggleButton__ToggleInput-asgrb8-2 bdUrci"
                  disabled=""
                  id="reject-visibility"
                  type="checkbox"
                  value="on"
                />
                <span
                  class="ToggleButton__Slider-asgrb8-0 bzNtZY"
                  disabled=""
                />
              </div>
              <p
                class="Text-sc-1wu7vpu-0 bYIwbm"
                color="currentColor"
                disabled=""
                font-size="16px"
              >
                Hidden
              </p>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`Storyshots Form Form 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <form
      class="Form-n70q8u-0 cTTHCQ"
    >
      <h2
        class="Text-sc-1wu7vpu-0-h2 iNwjDZ"
        font-size="26px"
        font-weight="500"
      >
        New Profile
      </h2>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Name
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                id="name"
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Date of birth
            </span>
            <span
              class="Text-sc-1wu7vpu-0 AJnss"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
            <p
              class="Text-sc-1wu7vpu-0 HelpText__HelpTextContent-sc-1jzmq2g-0 gYbAkC"
              color="currentColor"
              font-size="16px"
            >
              Enter a date below
            </p>
          </div>
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                id="birthdate"
                placeholder="DD-MM-YYYY"
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Place of birth
            </span>
            <span
              class="Text-sc-1wu7vpu-0 AJnss"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                id="birthplace"
              />
            </div>
          </div>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Form With form sections 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <form
      class="Form-n70q8u-0 cTTHCQ"
    >
      <h2
        class="Text-sc-1wu7vpu-0-h2 iNwjDZ"
        font-size="26px"
        font-weight="500"
      >
        New Profile
      </h2>
      <fieldset
        class="FormSection-sc-5yud6c-1 iWTTOf"
      >
        <legend
          class="Text-sc-1wu7vpu-0-h3 Headings__SubsectionTitle-igpciy-0 FormSection__FormSectionTitle-sc-5yud6c-0 hiJQbh"
          font-size="20px"
          font-weight="500"
        >
          Personal Information
        </legend>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Name
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="name"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Date of birth
              </span>
              <span
                class="Text-sc-1wu7vpu-0 AJnss"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
              <p
                class="Text-sc-1wu7vpu-0 HelpText__HelpTextContent-sc-1jzmq2g-0 gYbAkC"
                color="currentColor"
                font-size="16px"
              >
                Enter a date below
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="birthdate"
                  placeholder="DD-MM-YYYY"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Place of birth
              </span>
              <span
                class="Text-sc-1wu7vpu-0 AJnss"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="birthplace"
                />
              </div>
            </div>
          </label>
        </div>
      </fieldset>
      <fieldset
        class="FormSection-sc-5yud6c-1 iWTTOf"
      >
        <legend
          class="Text-sc-1wu7vpu-0-h3 Headings__SubsectionTitle-igpciy-0 FormSection__FormSectionTitle-sc-5yud6c-0 hiJQbh"
          font-size="20px"
          font-weight="500"
        >
          General Information
        </legend>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Gender
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="gender"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Occupation
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="occupation"
                />
              </div>
            </div>
          </label>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`Storyshots Form With form sections without titles 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <form
      class="Form-n70q8u-0 cTTHCQ"
    >
      <h2
        class="Text-sc-1wu7vpu-0-h2 iNwjDZ"
        font-size="26px"
        font-weight="500"
      >
        New Profile
      </h2>
      <fieldset
        class="FormSection-sc-5yud6c-1 gXpGHJ"
      >
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Name
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="name"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Date of birth
              </span>
              <span
                class="Text-sc-1wu7vpu-0 AJnss"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
              <p
                class="Text-sc-1wu7vpu-0 HelpText__HelpTextContent-sc-1jzmq2g-0 gYbAkC"
                color="currentColor"
                font-size="16px"
              >
                Enter a date below
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="birthdate"
                  placeholder="DD-MM-YYYY"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Place of birth
              </span>
              <span
                class="Text-sc-1wu7vpu-0 AJnss"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="birthplace"
                />
              </div>
            </div>
          </label>
        </div>
      </fieldset>
      <fieldset
        class="FormSection-sc-5yud6c-1 gXpGHJ"
      >
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Gender
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="gender"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Occupation
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="occupation"
                />
              </div>
            </div>
          </label>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`Storyshots Form Without title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <form
      class="Form-n70q8u-0 gBXptA"
    >
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Name
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                id="name"
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Date of birth
            </span>
            <span
              class="Text-sc-1wu7vpu-0 AJnss"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
            <p
              class="Text-sc-1wu7vpu-0 HelpText__HelpTextContent-sc-1jzmq2g-0 gYbAkC"
              color="currentColor"
              font-size="16px"
            >
              Enter a date below
            </p>
          </div>
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                id="birthdate"
                placeholder="DD-MM-YYYY"
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Place of birth
            </span>
            <span
              class="Text-sc-1wu7vpu-0 AJnss"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                id="birthplace"
              />
            </div>
          </div>
        </label>
      </div>
    </form>
  </div>
</div>
`;
